[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/SaveSelectionPanel.gd" type="Script" id=1]
[ext_resource path="res://Themes/DinamycText.tres" type="DynamicFont" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Sprite/Gui/NbPixelFontBundle_v1_0/Bitfantasy.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="Control"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 496.0
margin_top = 216.0
margin_right = -496.0
margin_bottom = -208.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel_box" type="VBoxContainer" parent="Control/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 4
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/PopupPanel/panel_box"]
margin_right = 280.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "Select the save slot
"
align = 1

[node name="slot0" type="Button" parent="Control/PopupPanel/panel_box"]
margin_left = 57.0
margin_top = 59.0
margin_right = 222.0
margin_bottom = 93.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Save Slot 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box_slot1" type="VBoxContainer" parent="Control/PopupPanel/panel_box"]
margin_left = 58.0
margin_top = 136.0
margin_right = 221.0
margin_bottom = 170.0
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="slot1" type="Button" parent="Control/PopupPanel/panel_box/box_slot1"]
margin_right = 163.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Save Slot 1"

[node name="box_slot2" type="VBoxContainer" parent="Control/PopupPanel/panel_box"]
margin_left = 57.0
margin_top = 214.0
margin_right = 222.0
margin_bottom = 248.0
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="slot2" type="Button" parent="Control/PopupPanel/panel_box/box_slot2"]
margin_right = 165.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Save Slot 2"

[connection signal="popup_hide" from="Control/PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="pressed" from="Control/PopupPanel/panel_box/slot0" to="." method="slot0"]
[connection signal="pressed" from="Control/PopupPanel/panel_box/box_slot1/slot1" to="." method="slot1"]
[connection signal="pressed" from="Control/PopupPanel/panel_box/box_slot2/slot2" to="." method="slot2"]
